<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/main_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fldUser"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/UserName" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:id="@+id/fldPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/btnLogin"
                    android:text="@string/LogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/btnForgotPass"
                    android:text="@string/RecoverPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/btnRegister"
                    android:text="@string/SingUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/btnConfirmUser"
                    android:text="@string/ConfirmUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

